Got meal insertion workng

--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
                 <div class="meals-list-wrapper">
                     <div class="shopping-list meals-list">
 
-                        <button class="accordion browser-default">Monday</button>
-                        <div class="panel">
+                        <button id="monday" class="accordion browser-default">Monday</button>
+                        <div id="monday-panel" class="panel">
                             <div class="shopping-item">
                                 <div class="check">
                                     <div data-id="57GyKmlSAYA8FbziVjOi" class="check-mark ">
@@ -141,8 +141,8 @@
                             </div>
                         </div>
 
-                        <button class="accordion browser-default">Tuesday</button>
-                        <div class="panel">
+                        <button id="tuesday" class="accordion browser-default">Tuesday</button>
+                        <div id="tuesday-panel" class="panel">
                             <div class="shopping-item">
                                 <div class="check">
                                     <div data-id="57GyKmlSAYA8FbziVjOi" class="check-mark ">
@@ -158,8 +158,8 @@
                             </div>
                         </div>
 
-                        <button class="accordion browser-default">Wednesday</button>
-                        <div class="panel">
+                        <button id="wednesday" class="accordion browser-default">Wednesday</button>
+                        <div id="wednesday-panel" class="panel">
                             <div class="shopping-item">
                                 <div class="check">
                                     <div data-id="57GyKmlSAYA8FbziVjOi" class="check-mark ">
@@ -175,8 +175,8 @@
                             </div>
                         </div>
 
-                        <button class="accordion browser-default">Thursday</button>
-                        <div class="panel">
+                        <button id="thursday" class="accordion browser-default">Thursday</button>
+                        <div id="thursday-panel" class="panel">
                             <div class="shopping-item">
                                 <div class="check">
                                     <div data-id="57GyKmlSAYA8FbziVjOi" class="check-mark ">
@@ -192,8 +192,8 @@
                             </div>
                         </div>
 
-                        <button class="accordion browser-default">Friday</button>
-                        <div class="panel">
+                        <button id="friday" class="accordion browser-default">Friday</button>
+                        <div id="friday-panel" class="panel">
                             <div class="shopping-item">
                                 <div class="check">
                                     <div data-id="57GyKmlSAYA8FbziVjOi" class="check-mark ">
@@ -209,8 +209,8 @@
                             </div>
                         </div>
 
-                        <button class="accordion browser-default">Saturday</button>
-                        <div class="panel">
+                        <button id="saturday" class="accordion browser-default">Saturday</button>
+                        <div id="saturday-panel" class="panel">
                             <div class="shopping-item">
                                 <div class="check">
                                     <div data-id="57GyKmlSAYA8FbziVjOi" class="check-mark ">
@@ -226,8 +226,8 @@
                             </div>
                         </div>
 
-                        <button class="accordion browser-default">Sunday</button>
-                        <div class="panel">
+                        <button id="sunday" class="accordion browser-default">Sunday</button>
+                        <div id="sunday-panel" class="panel">
                             <div class="shopping-item">
                                 <div class="check">
                                     <div data-id="57GyKmlSAYA8FbziVjOi" class="check-mark ">
@@ -245,7 +245,7 @@
                     </div>
 
                     <div class="items-info">
-                        <div class="items-number"><span id="total">10</span> items</div>
+                        <div class="items-number"><span id="meals-total">10</span> items</div>
                         <div class="controls">
                             <span class="clear-complete"><img class="bin" src="/images/shopping-list/bin.svg">Clear
                                 Completed</span>
