Add complete and delete functions and rename markup for meals screen

--- a/index.html
+++ b/index.html
@@ -122,11 +122,11 @@
                 </div>
 
                 <div class="meals-list-wrapper">
-                    <div class="shopping-list meals-list">
+                    <div class="meals-list">
 
                         <button id="monday" class="accordion browser-default">Monday</button>
                         <div id="monday-panel" class="panel">
-                            <div class="shopping-item">
+                            <div class="meals-item">
                                 <div class="check">
                                     <div data-id="57GyKmlSAYA8FbziVjOi" class="check-mark ">
                                         <img src="/images/shopping-list/icon-check.svg">
@@ -143,7 +143,7 @@
 
                         <button id="tuesday" class="accordion browser-default">Tuesday</button>
                         <div id="tuesday-panel" class="panel">
-                            <div class="shopping-item">
+                            <div class="meals-item">
                                 <div class="check">
                                     <div data-id="57GyKmlSAYA8FbziVjOi" class="check-mark ">
                                         <img src="/images/shopping-list/icon-check.svg">
@@ -160,7 +160,7 @@
 
                         <button id="wednesday" class="accordion browser-default">Wednesday</button>
                         <div id="wednesday-panel" class="panel">
-                            <div class="shopping-item">
+                            <div class="meals-item">
                                 <div class="check">
                                     <div data-id="57GyKmlSAYA8FbziVjOi" class="check-mark ">
                                         <img src="/images/shopping-list/icon-check.svg">
@@ -177,7 +177,7 @@
 
                         <button id="thursday" class="accordion browser-default">Thursday</button>
                         <div id="thursday-panel" class="panel">
-                            <div class="shopping-item">
+                            <div class="meals-item">
                                 <div class="check">
                                     <div data-id="57GyKmlSAYA8FbziVjOi" class="check-mark ">
                                         <img src="/images/shopping-list/icon-check.svg">
@@ -194,7 +194,7 @@
 
                         <button id="friday" class="accordion browser-default">Friday</button>
                         <div id="friday-panel" class="panel">
-                            <div class="shopping-item">
+                            <div class="meals-item">
                                 <div class="check">
                                     <div data-id="57GyKmlSAYA8FbziVjOi" class="check-mark ">
                                         <img src="/images/shopping-list/icon-check.svg">
@@ -211,7 +211,7 @@
 
                         <button id="saturday" class="accordion browser-default">Saturday</button>
                         <div id="saturday-panel" class="panel">
-                            <div class="shopping-item">
+                            <div class="meals-item">
                                 <div class="check">
                                     <div data-id="57GyKmlSAYA8FbziVjOi" class="check-mark ">
                                         <img src="/images/shopping-list/icon-check.svg">
@@ -228,7 +228,7 @@
 
                         <button id="sunday" class="accordion browser-default">Sunday</button>
                         <div id="sunday-panel" class="panel">
-                            <div class="shopping-item">
+                            <div class="meals-item">
                                 <div class="check">
                                     <div data-id="57GyKmlSAYA8FbziVjOi" class="check-mark ">
                                         <img src="/images/shopping-list/icon-check.svg">
@@ -244,10 +244,10 @@
                         </div>
                     </div>
 
-                    <div class="items-info">
+                    <div class="meals-items-info">
                         <div class="items-number"><span id="meals-total">10</span> items</div>
                         <div class="controls">
-                            <span class="clear-complete"><img class="bin" src="/images/shopping-list/bin.svg">Clear
+                            <span class="meals-complete"><img class="bin" src="/images/shopping-list/bin.svg">Clear
                                 Completed</span>
                         </div>
                     </div>
