Final commit before encryption

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script src="/js/shopping-list/meals.js"></script>
     <script src="/js/shopping-list/accordion.js"></script>
     <script src="/js/shopping-list/dates.js"></script>
+    <script src="/js/shopping-list/snackbar.js"></script>
 </head>
 
 <body>
@@ -152,6 +153,8 @@
                         <div id="sunday-panel" class="panel">
                         </div>
                     </div>
+
+                    <div id="snackbar">🍔 Meal added!</div>
 
                     <div class="meals-items-info">
                         <div class="items-number"><span id="meals-total">10</span> items</div>
