Add message to staticrypt

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
             <div class="staticrypt-form">
                 <div class="staticrypt-instructions">
                     <p class="staticrypt-title">Protected Page</p>
-                    <p></p>
+                    <p>Reach out to request the password, this is my real shopping list.</p>
                 </div>
 
                 <hr class="staticrypt-hr" />
