--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 
 <head>
     <meta charset="utf-8" />
-    <link rel="manifest" href="manifest.json" />
     <title>Protected Page</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="manifest" href="./site.webmanifest">
+
 
     <!-- do not cache this page -->
     <meta http-equiv="cache-control" content="max-age=0" />
